# XLVentures_Hackathon_Project_02

./: .env.example  .gitignore  Dockerfile  PROJECT_SPEC.md  README.md  architecture.md  docker-compose.yml  pyproject.toml
backend/: alembic.ini
config/: README.md  application.yaml  database.yaml  llm.yaml  logging.yaml  plugins.yaml  security.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
infrastructure/: README.md
scripts/: README.md  backup.py  install.sh  load_plugins.py  reindex_knowledge.py  seed_db.py
tests/: __init__.py
tests/actions/: test_phase1.py  test_phase2.py  test_phase3.py
tests/api/: test_system.py
tests/auth/: test_dtos.py  test_enums.py  test_events.py  test_exceptions.py  test_imports.py  test_interfaces.py  test_models.py
tests/data_import/: test_classifier.py  test_coordinator.py  test_deduplicators.py  test_e2e_verify.py  test_importers.py  test_integration.py  test_readers.py  test_services.py  test_statistics.py  test_validators.py
tests/energy/: test_phase1.py  test_phase2.py  test_phase3.py
tests/evidence/: test_dtos.py  test_enums.py  test_events.py  test_exceptions.py  test_imports.py  test_interfaces.py  test_models.py  test_phase2.py  test_phase3.py  test_phase35.py
tests/execution/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase35.py
tests/explainability/: __init__.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase35.py
tests/knowledge/: test_dtos.py  test_enums.py  test_events.py  test_exceptions.py  test_execution.py  test_imports.py  (+4 more)
(+1195 files in other folders)
