[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "adip-backend"
version = "0.1.0"
description = "Backend for the Agentic Decision Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "ADIP Team" }]
dependencies = [
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "bcrypt>=4.1,<5",
  "chromadb>=0.5,<2",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "pyjwt>=2.9,<3",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "redis>=5,<7",
  "sqlalchemy[asyncio]>=2.0,<3",
  "structlog>=24.4,<26",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/adip"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["backend/src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["adip"]
mypy_path = "backend/src"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend/src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

